fixed links in navbar and footer, made phone field more clear in consultjs. made navbar collapse when item is clicked

--- a/src/css/consult.css
+++ b/src/css/consult.css
@@ -3,6 +3,11 @@
     color: white;
 }
 
+.consult-button:hover {
+    background: #f014be;
+    color: white;
+}
+
 .consult-title {
     font-size: 30px;
     padding-top: 1em;
