--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -12,6 +12,7 @@
 
 .med-icon {
     font-size: 35px;
+    color: #f014be;
 }
 
 .med-icon-toggler {
